# EEG_Interface

./: .gitignore  README.md  cyton_eeg_realtime.py  features.py  pseudocode.txt  pyproject.toml
EEG_Interface/: Demo.py  main.py
EEG_Interface/TutoCode/: cyton_eeg.py
EEG_Interface/Utils/: Visualize.py
eeg_interface/: demo.py  visualize.py
eeg_interface/data_handler/: demo.py
eeg_interface/models/: demo.py
eeg_interface/utils/: visualize.py
