[tool.poetry]
name = "eeg-interface"
version = "0.1.0"
description = ""
authors = ["CIA"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
click = "^8.1.7"
brainflow = "^5.13.3"
argparse = "^1.4.0"
pyqt5 = "^5.15.11"
pyqtgraph = "^0.13.7"
pyqt5-qt5 = "^5.15.14"
pyqt5-sip = "^12.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
